# sage-maker-code

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  azure-pipelines.yml  build_and_push.sh  docker-entrypoint.sh  model-deployment-pipeline.yml  pyproject.toml  serve.py  train.py  upload-model-to-s3.sh
fraud/config/: __init__.py  settings.py
fraud/data/: __init__.py
fraud/data/repositories/: __init__.py  local_repository.py  repository.py  repository_factory.py  repository_params.py  synthetic_repository.py
fraud/data_schemas/: __init__.py  data_schema.py  data_schema_factory.py  synthetic_schema.py  validation.py
fraud/domain/: __init__.py  data_simulator.py  kpis.py  models.py
fraud/domain/feature_transformations/: __init__.py  aggregated_features.py  binary_encoding.py  time_enconding.py
fraud/entrypoints/: __init__.py  api.py  assets.py  routes.py  wsgi.py
fraud/ml/: __init__.py
fraud/ml/algorithms/: __init__.py  algorithm.py  algorithm_factory.py  algorithm_params.py  light_gbm.py
fraud/ml/artifact_repositories/: __init__.py  artifact_repository.py
fraud/ml/estimators/: __init__.py  estimator.py  estimator_factory.py  fake_estimator.py  ml_estimator.py
fraud/ml/evaluators/: __init__.py  evaluator.py  evaluator_factory.py  (+2 more)
fraud/services/: __init__.py  contracts.py  prediction_service.py  sm_prediction_service.py
fraud/utils/: __init__.py  aws.py  cache.py  io.py  logging.py  plot.py  time.py
scripts/: create_model_group.py  deploy_model_from_registry.py  register_realtime_model.py  train_model.py
(+22 files in other folders)
