[tool.poetry]
name = "python-model-deployment-scenario"
version = "0.1.0"
description = "Project example on how to deploy an ML model to AWS Sagemaker"
authors = ["Heber Trujillo <h.trujillo@zurich.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
pre-commit = "^3.6.0"
loguru = "^0.7.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pandera = "^0.18.0"
joblib = "^1.3.2"
lightgbm = "^4.2.0"
scikit-optimize = "^0.9.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
boto3 = "^1.34.19"
flask = "^3.0.1"
gunicorn = "^21.2.0"
requests = "^2.31.0"
six = "1.16.0"


[[tool.poetry.source]]
name = "fpho"
url = "https://files.pythonhosted.org"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.flake8]
exclude = ".venv"